--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-wind": "^1.2.0",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
