--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-wind": "^1.2.0",
