--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.71.6",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-input-search-bar": "^0.0.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-wind": "^1.2.0",
