--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-alert-notification": "^0.3.4",
+    "react-native-awesome-alerts": "^2.0.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-input-search-bar": "^0.0.8",
