--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -16,14 +17,16 @@
     "expo": "~48.0.10",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-storage": "^48.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-element-dropdown": "^2.9.0",
     "react-native-alert-notification": "^0.3.4",
+    "react-native-async-storage": "^0.0.1",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-input-search-bar": "^0.0.8",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-safe-area-context": "4.5.0",
