--- a/package.json
+++ b/package.json
@@ -9,17 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "@react-native-async-storage/async-storage": "1.17.11",
-=======
-    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/blur": "^4.3.0",
->>>>>>> 6937ed05bdb372ff113a1bb4c9770c9bc9e4d676
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.5",
     "expo": "~48.0.10",
+    "expo-blur": "~12.2.2",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-storage": "^48.0.1",
@@ -28,7 +24,6 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-alert-notification": "^0.3.4",
-    "react-native-async-storage": "^0.0.1",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-dotenv": "^3.4.8",
     "react-native-dropdown-picker": "^5.4.6",
@@ -42,8 +37,7 @@
     "react-native-switch-selector": "^2.3.0",
     "react-native-wind": "^1.2.0",
     "tailwindcss": "^3.3.1",
-    "yup": "^1.1.1",
-    "expo-blur": "~12.2.2"
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
