--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -22,7 +22,7 @@
     "formik": "^2.2.9",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.7",
     "react-native-alert-notification": "^0.3.4",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-dotenv": "^3.4.8",
