--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eject": "expo eject",
+    "build": "expo build:android",
+    "eas": "eas"
   },
   "dependencies": {
     "@react-native-community/blur": "^4.3.0",
@@ -40,7 +43,8 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eas-cli": "^3.10.2"
   },
   "private": true
 }
