--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/blur": "^4.3.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.5",
     "expo": "~48.0.10",
-    "expo-blur": "~12.2.2",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-storage": "^48.0.1",
@@ -23,21 +21,18 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
-    "react-native-alert-notification": "^0.3.4",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-dotenv": "^3.4.8",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-element-dropdown": "^2.9.0",
-    "react-native-input-search-bar": "^0.0.8",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
-    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-switch-selector": "^2.3.0",
     "react-native-wind": "^1.2.0",
     "tailwindcss": "^3.3.1",
-    "yup": "^1.1.1"
+    "yup": "^1.1.1",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
